# scratchx

./: CMakeLists.txt  main.c
asm/scratchx_functions/: char_at.asm  run_asm.c  str_contains.asm  str_join.asm  str_length.asm  to_number.asm  to_string.asm
asm/scratchx_functions/math/: abs.asm  acos.asm  asin.asm  atan.asm  cos.asm  exp.asm  exp10.asm  ln.asm  log.asm  mod.asm  random.asm  round.asm  sin.asm  sqrt.asm  tan.asm
parser/include/: parser.h  scratchx_json.h  scratchx_parser.h  scratchx_target.h
parser/src/: parser.c  scratchx_json.c  scratchx_parser.c
test_jsons/: forever_loop.json
types/: scratchx_types.h
